--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
@@ -31,7 +31,7 @@
                     <a asp-page="/Comment/Comment/Index" class="waves-effect"><i class="md md-comment"></i><span> کامنت ها </span></a>
                 </li>
                 <li class="has_sub">
-                    <a class="waves-effect"><i class="md md-mail"></i><span> فروشگاه </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                    <a class="waves-effect"><i class="md md-shop"></i><span> فروشگاه </span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
                         <li><a asp-page="/Shop/slides/Index">اسلایدر</a></li>
                         <li><a asp-page="/Shop/ProductCategories/Index">گروه محصولات</a></li>
@@ -41,19 +41,15 @@
                     </ul>
                 </li>
                 <li class="has_sub">
-                    <a class="waves-effect"><i class="md md-mail"></i><span> سیستم تخفیفات </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                    <a class="waves-effect"><i class="md md-business"></i><span> سیستم تخفیفات </span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
                         <li><a asp-page="/Discounts/CustomerDiscounts/Index">تخفیف مشتری</a></li>
                         <li><a asp-page="/Discounts/ColleagueDiscounts/Index">تخفیف همکاری</a></li>
 
                     </ul>
                 </li>
-
-                <li>
-                    <a asp-page="/Comment/Comment/Index" class="waves-effect"><i class="md md-mail"></i><span> کامنت ها </span></a>
-                </li>
                 <li class="has_sub">
-                    <a class="waves-effect"><i class="md md-mail"></i><span> سیستم بلاگینگ </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                    <a class="waves-effect"><i class="md md-account-box"></i><span> سیستم بلاگینگ </span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
                         <li><a asp-page="/Blog/Articles/Index">مقالات</a></li>
                         <li><a asp-page="/Blog/ArticleCategories/Index">گروه مقالات</a></li>
