--- a/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Create.cshtml
@@ -39,7 +39,7 @@
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label asp-for="Password" class="control-label">پسورد</label>
+                    <label asp-for="Password" class="control-label">رمز عبور</label>
                     <input type="text" class="form-control" asp-for="Password">
                     <span asp-validation-for="Password" class="error"></span>
                 </div>
