--- a/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Edit.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model ShopManagement.Application.Contract.Product.EditProduct
+﻿@model AccountManagement.Applicatoin.Contracts.Account.EditAccount
 @{
 }
 
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h4 class="modal-title">ویرایش محصول :@Model.Name</h4>
+    <h4 class="modal-title">ویرایش  کاربر :@Model.Fullname</h4>
 </div>
 @*//jahat estefad dar site.js --->data-ajax="true"*@
 <form asp-page="./Index" asp-page-handler="Edit"
@@ -17,115 +17,43 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label asp-for="Name" class="control-label">نام</label>
+                    <label asp-for="Fullname" class="control-label">نام</label>
                     @*dar jqueery site.js makeslug vojod dare va baese poor shodan khodkare Slug az name mishe*@
-                    <input type="text" class="form-control" asp-for="Name">
-                    <span asp-validation-for="Name" class="error"></span>
+                    <input type="text" class="form-control" asp-for="Fullname">
+                    <span asp-validation-for="Fullname" class="error"></span>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label asp-for="Code" class="control-label">کد</label>
-                    @*dar jqueery site.js makeslug vojod dare va baese poor shodan khodkare Slug az name mishe*@
-                    <input type="text" class="form-control" asp-for="Code">
-                    <span asp-validation-for="Code" class="error"></span>
+                    <label asp-for="Username" class="control-label">نام کاربری</label>
+                    <input type="text" class="form-control" asp-for="Username">
+                    <span asp-validation-for="Username" class="error"></span>
                 </div>
             </div>
-
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="Mobile" class="control-label">موبایل</label>
+                    <input type="text" class="form-control" asp-for="Mobile">
+                    <span asp-validation-for="Mobile" class="error"></span>
+                </div>
+            </div>
         </div>
         @* در هر کلاس رو رو کلاس ام دی 6 بیشتر جا نمیگیره *@
         <div class="row">
-            
+
             <div class="col-md-12">
                 <div class="form-group">
-                    <label asp-for="CategoryId" class="control-label">گروه محصول</label>
+                    <label asp-for="RoleId" class="control-label">نقش ها</label>
                     @* برای اینکه از تکنولوژی ام وی سی در کانترکت کریت استفاده نکنیم و وابستگی ایجاد نکنیم *@
                     @* از این روش استفاده کردیم *@
-                    <select class="form-control" asp-for="CategoryId"
-                            asp-items='new SelectList(Model.Categories,"Id","Name")'>
-                        <option value="0">گروه محصول</option>
+                    <select class="form-control" asp-for="RoleId"
+                            asp-items='new SelectList(Model.Roles,"Id","Name")'>
+                        <option value="0">نقش</option>
                     </select>
-                    <span asp-validation-for="CategoryId" class="error"></span>
+                    <span asp-validation-for="RoleId" class="error"></span>
                 </div>
             </div>
         </div>
-        @*row*@
-        <div class="row">
-            @* کلاس ام دی 12 یعنی یک سطر کامل *@
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label asp-for="Picture" class="control-label">عکس</label>
-                    @*<input type="file" class="form-control" asp-for="Picture" accept="image/*">*@
-                    <input type="file" class="form-control" asp-for="Picture" accept="image/*">
-                    <span asp-validation-for="Picture" class="error"></span>
-                </div>
-            </div>
-        </div>  @*row*@
-        <div class="row">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="PictureAlt" class="control-label">Alt</label>
-                    <input type="text" class="form-control" asp-for="PictureAlt">
-                    <span asp-validation-for="PictureAlt" class="error"></span>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="PictureTitle" class="control-label">عنوان</label>
-                    <input type="text" class="form-control" asp-for="PictureTitle">
-                    <span asp-validation-for="PictureTitle" class="error"></span>
-                </div>
-            </div>
-        </div>  @*row*@
-        <div class="row">
-            <div class="col-md-12">
-                <div class="form-group no-margin">
-                    <label asp-for="ShortDescription" class="control-label"> توضیحات کوتاه</label>
-                    @* آن چنج روی توضیح مختصز گذاشته شد *@
-                    <textarea class="form-control autogrow" asp-for="ShortDescription" onchange="fillField('ShortDescription', 'MetaDescription')"
-                              style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 80px;"></textarea>
-                    <span asp-validation-for="ShortDescription" class="error"></span>
-                </div>
-            </div>
-        </div>  @*row*@
-        <div class="row">
-            <div class="col-md-12">
-                <div class="form-group no-margin">
-                    <label asp-for="Description" class="control-label">توضیحات</label>
-                    <textarea class="form-control autogrow" asp-for="Description"
-                              style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 104px;"></textarea>
-                    <span asp-validation-for="Description" class="error"></span>
-                </div>
-            </div>
-        </div>  @*row*@
-        <div class="row">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="Slug" class="control-label">اسلاگ</label>
-                    <input type="text" class="form-control" asp-for="Slug">
-                    <span asp-validation-for="Slug" class="error"></span>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="Keywords" class="control-label">کلمات کلیدی</label>
-                    <input type="text" class="form-control" asp-for="Keywords">
-                    <span asp-validation-for="Keywords" class="error"></span>
-                </div>
-            </div>
-        </div>  @*row*@
-        <div class="row">
-            <div class="col-md-12">
-                <div class="form-group no-margin">
-                    <label asp-for="MetaDescription" class="control-label">توضیحات متا</label>
-                    <textarea class="form-control autogrow" asp-for="MetaDescription"
-                              style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 104px;"></textarea>
-                    <span asp-validation-for="MetaDescription" class="error"></span>
-                </div>
-            </div>
-        </div>  @*row*@
-        
-        @* جهت داشتن آی دی *@
         <input type="hidden" asp-for="Id" value="@Model.Id"/>
     </div>
     <div class="modal-footer">
