--- a/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Index.cshtml
@@ -90,13 +90,11 @@
                                     <td>@item.Role</td>
                                     <td>@item.CreationDate</td>
                                     <td>
-                                        <a class="btn btn-warning btn-rounded waves-effect waves-light m-b-5"
+                                        <a class="btn btn-warning btn-default waves-effect waves-light m-b-5"
                                            href="#showmodal=@Url.Page("./Index", "Edit", new {id = @item.Id})">
                                             <i class="fa fa-edit"></i> ویرایش
                                         </a>
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-primary btn-rounded waves-effect waves-light m-b-5"
+                                        <a class="btn btn-primary btn-default waves-effect waves-light m-b-5"
                                            href="#showmodal=@Url.Page("./Index", "ChangePassword", new {id = @item.Id})">
                                             <i class="fa fa-key"></i> تغییر رمز
                                         </a>
