--- a/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Create.cshtml
@@ -53,14 +53,10 @@
                 <label asp-for="RoleId" class="control-label">نقش ها</label>
                 @* برای اینکه از تکنولوژی ام وی سی در کانترکت کریت استفاده نکنیم و وابستگی ایجاد نکنیم *@
                 @* از این روش استفاده کردیم *@
-                @*<select class="form-control" asp-for="RoleId" 
+                <select class="form-control" asp-for="RoleId" 
                         asp-items='new SelectList(Model.Roles,"Id","Name")'>
                     <option value="0">نقش</option>
-                </select>*@
-            <select asp-for="RoleId" class="form-control">
-                <option value="1">مدیر سیستم</option>
-                <option value="2">کاربر سیستم</option>
-            </select>
+                </select>
                 <span asp-validation-for="RoleId" class="error"></span>
             </div>
         </div>
