--- a/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Role/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Role/Create.cshtml
@@ -1,74 +1,31 @@
-﻿@model AccountManagement.Applicatoin.Contracts.Account.CreateAccount
+﻿@model AccountManagement.Applicatoin.Contracts.Role.CreateRole
 @{
 }
 
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h4 class="modal-title">ایجاد کاربر جدید</h4>
+    <h4 class="modal-title">ایجاد نقش جدید</h4>
 </div>
 @*//jahat estefad dar site.js --->data-ajax="true"*@
 <form asp-page="./Index" asp-page-handler="Create"
       method="post"
       data-ajax="true"
       data-callback=""
-      data-action="Refresh"
-      enctype="multipart/form-data">
+      data-action="Refresh" >
     <div class="modal-body">
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label asp-for="Fullname" class="control-label">نام</label>
-                    @*dar jqueery site.js makeslug vojod dare va baese poor shodan khodkare Slug az name mishe*@
-                    <input type="text" class="form-control" asp-for="Fullname">
-                    <span asp-validation-for="Fullname" class="error"></span>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="Username" class="control-label">نام کاربری</label>
-                    <input type="text" class="form-control" asp-for="Username">
-                    <span asp-validation-for="Username" class="error"></span>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="Mobile" class="control-label">موبایل</label>
-                    <input type="text" class="form-control" asp-for="Mobile">
-                    <span asp-validation-for="Mobile" class="error"></span>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="Password" class="control-label">رمز عبور</label>
-                    <input type="text" class="form-control" asp-for="Password">
-                    <span asp-validation-for="Password" class="error"></span>
+                    <label asp-for="Name" class="control-label">نام</label>
+                    <input type="text" class="form-control" asp-for="Name">
+                    <span asp-validation-for="Name" class="error"></span>
                 </div>
             </div>
         </div>
-        @* در هر کلاس رو رو کلاس ام دی 6 بیشتر جا نمیگیره *@
-    <div class="row">
 
-        <div class="col-md-12">
-            <div class="form-group">
-                <label asp-for="RoleId" class="control-label">نقش ها</label>
-                @* برای اینکه از تکنولوژی ام وی سی در کانترکت کریت استفاده نکنیم و وابستگی ایجاد نکنیم *@
-                @* از این روش استفاده کردیم *@
-                @*<select class="form-control" asp-for="RoleId" 
-                        asp-items='new SelectList(Model.Roles,"Id","Name")'>
-                    <option value="0">نقش</option>
-                </select>*@
-            <select asp-for="RoleId" class="form-control">
-                <option value="1">مدیر سیستم</option>
-                <option value="2">کاربر سیستم</option>
-            </select>
-                <span asp-validation-for="RoleId" class="error"></span>
-            </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">بستن</button>
+            <button type="submit" class="btn btn-info waves-effect waves-light">ایجاد</button>
         </div>
-    </div>
-
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">بستن</button>
-        <button type="submit" class="btn btn-info waves-effect waves-light">ایجاد</button>
     </div>
 </form>
