--- a/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Role/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Role/Index.cshtml
@@ -1,64 +1,28 @@
 ﻿@page
-@model ServiceHost.Areas.Administration.Pages.Accounts.Account.IndexModel
+@model ServiceHost.Areas.Administration.Pages.Accounts.Role.IndexModel
 @{
 }
 @{
     Layout = "Shared/_AdminLayout";
-    ViewData["title"] = "مدیریت کاربران";
+    ViewData["title"] = "مدیریت نقش ها";
 }
 
 <div class="row">
     <div class="col-sm-12">
         <h4 class="page-title pull-right">@ViewData["title"]</h4>
         <p class="pull-left">
-            <a class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")">ایجاد کاربر جدید</a>
+            <a class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")">ایجاد نقش جدید</a>
         </p>
     </div>
 </div>
 
-<div class="row">
+
+
+<div class="row" >
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">جستجو در کاربران</h3>
-            </div>
-            <div class="panel-body">
-                <form class="form-inline" role="form" method="get">
-                    @*//Search By*@
-                    <div class="form-group">
-                        <label class="sr-only" asp-for="SearchModel.Fullname"></label>
-                        <input class="form-control" placeholder="نام" asp-for="SearchModel.Fullname">
-                    </div>
-                    <div class="form-group">
-                        <label class="sr-only" asp-for="SearchModel.Username"></label>
-                        <input class="form-control" placeholder="نام کاربری" asp-for="SearchModel.Username">
-                    </div>
-                    <div class="form-group">
-                        <label class="sr-only" asp-for="SearchModel.Mobile"></label>
-                        <input class="form-control" placeholder="موبایل" asp-for="SearchModel.Mobile">
-                    </div>
-                    <div class="form-group">
-                        <label class="sr-only" asp-for="SearchModel.RoleId"></label>
-                        <select class="form-control" asp-for="SearchModel.RoleId" asp-items="Model.Roles">
-                            <option value="0">نقش ها</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-success waves-effect waves-light m-l-10">جستجو</button>
-                    <a class="btn btn-primary waves-effect waves-light m-l-10" asp-page="./Index">مشاهده همه</a>
-                </form>
-
-                
-            </div>
-
-        </div>
-    </div>
-</div>
-
-<div class="row" id="ProductCategoriesDiv">
-    <div class="col-md-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">لیست کاربران (@Model.Accounts.Count)</h3>
+                <h3 class="panel-title">لیست نقش ها (@Model.Roles.Count)</h3>
             </div>
             <div class="panel-body">
                 <div class="row">
@@ -67,36 +31,22 @@
                             <thead>
                                 <tr>
                                     <th>#</th>
-                                    <th>عکس</th>
                                     <th>نام</th>
-                                    <th>نام کاربری</th>
-                                    <th>موبایل</th>
-                                    <th>نقش</th>
                                     <th>تاریخ ایجاد</th>
                                     <th>عملیات</th>
                                 </tr>
                             </thead>
                             <tbody>
-                            @foreach (var item in Model.Accounts)
+                            @foreach (var item in Model.Roles)
                             {
                                 <tr>
                                     <td>@item.Id</td>
-                                    <td>
-                                        <img src="/ProductPictures/@item.ProfilePhoto" style="width: 50px; height: 50px" />
-                                    </td>
-                                    <td>@item.Fullname</td>
-                                    <td>@item.Username</td>
-                                    <td>@item.Mobile</td>
-                                    <td>@item.Role</td>
+                                    <td>@item.Name</td>
                                     <td>@item.CreationDate</td>
                                     <td>
                                         <a class="btn btn-warning btn-default waves-effect waves-light m-b-5"
                                            href="#showmodal=@Url.Page("./Index", "Edit", new {id = @item.Id})">
                                             <i class="fa fa-edit"></i> ویرایش
-                                        </a>
-                                        <a class="btn btn-primary btn-default waves-effect waves-light m-b-5"
-                                           href="#showmodal=@Url.Page("./Index", "ChangePassword", new {id = @item.Id})">
-                                            <i class="fa fa-key"></i> تغییر رمز
                                         </a>
                                     </td>
                                 </tr>
