--- a/LampShade/ServiceHost/Pages/Shared/Components/Menu/Default.cshtml
+++ b/LampShade/ServiceHost/Pages/Shared/Components/Menu/Default.cshtml
@@ -49,6 +49,9 @@
                                 <li>
                                     <a href="contact.html">تماس با ما</a>
                                 </li>
+                                <li>
+                                    <a asp-page="/Account">ورود</a>
+                                </li>
                             </ul>
                         </nav>
                     </div>
