--- a/LampShade/ServiceHost/Pages/Account.cshtml
+++ b/LampShade/ServiceHost/Pages/Account.cshtml
@@ -30,7 +30,12 @@
                     <div class="page-content-wrapper">
                         <div class="row">
                             <div class="col-sm-12 col-md-12 col-xs-12 col-lg-6">
-                                <form action="#">
+                                @if (@Model.Message != null)
+                                {
+                                    <div class="alert alert-danger">@Model.Message</div>
+                                }
+
+                                <form method="post" asp-page-handler="Login">
                                     <div class="login-form">
                                         <h4 class="login-title">ورود</h4>
                                         <div class="row">
@@ -43,11 +48,11 @@
                                                 <input type="password" name="Password" placeholder="کلمه رمز">
                                             </div>
                                             @*<div class="col-sm-6">
-                                                <div class="check-box d-inline-block ml-0 ml-md-2">
-                                                    <input type="checkbox" id="remember_me">
-                                                    <label for="remember_me">مرا به خاطر بسپار</label>
-                                                </div>
-                                            </div>*@
+                        <div class="check-box d-inline-block ml-0 ml-md-2">
+                            <input type="checkbox" id="remember_me">
+                            <label for="remember_me">مرا به خاطر بسپار</label>
+                        </div>
+                    </div>*@
 
                                             <div class="col-sm-6 text-left text-sm-right">
                                                 <a href="#" class="forget-pass-link"> رمز را فراموش کرده اید؟</a>
@@ -66,7 +71,7 @@
                                 <form action="#">
 
                                     <div class="login-form">
-                                        <h4 class="login-title">Register</h4>
+                                        <h4 class="login-title">ثبت نام</h4>
 
                                         <div class="row">
                                             <div class="col-md-6 col-12 mb-20">
@@ -79,7 +84,7 @@
                                             </div>
                                             <div class="col-md-12 mb-20">
                                                 <label>موبایل*</label>
-                                                <input type="email"  name="Mobile" placeholder="موبایل">
+                                                <input type="number"  name="Mobile" placeholder="موبایل">
                                             </div>
                                             <div class="col-md-6 mb-20">
                                                 <label>کلمه رمز</label>
