--- a/LampShade/ServiceHost/Pages/Shared/Components/Menu/Default.cshtml
+++ b/LampShade/ServiceHost/Pages/Shared/Components/Menu/Default.cshtml
@@ -1,5 +1,7 @@
 ﻿
+
 @model _01_LampShadeQuery.MemuModel
+@inject _0_Framework.Application.IAuthHelper AuthHelper
 @{
 }
 <div class="header-area header-sticky">
@@ -23,7 +25,7 @@
                                 </li>
 
                                 <li class="menu-item-has-children">
-                                    <a >محصولات</a>
+                                    <a>محصولات</a>
                                     <ul class="sub-menu">
                                         @foreach (var category in @Model.ProductCategories)
                                         {
@@ -34,7 +36,7 @@
                                     </ul>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a >مقالات</a>
+                                    <a>مقالات</a>
                                     <ul class="sub-menu">
 
                                         @foreach (var category in @Model.articleCategories)
@@ -49,9 +51,19 @@
                                 <li>
                                     <a href="contact.html">تماس با ما</a>
                                 </li>
-                                <li>
-                                    <a asp-page="/Account">ورود</a>
-                                </li>
+                                @if (AuthHelper.IsAuthenticated())
+                                {
+                                    <li>
+                                        <a asp-page="/Account" asp-page-handler="Logout">خروج</a>
+                                    </li>
+                                }
+                                else
+                                {
+                                    <li>
+                                     <a asp-page="/Account">ورود</a>
+                                    </li>
+                                }
+
                             </ul>
                         </nav>
                     </div>
