--- a/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model AccountManagement.Applicatoin.Contracts.Account.CreateAccount
+﻿@model AccountManagement.Applicatoin.Contracts.Account.RegisterAccount
 @{
 }
 
@@ -45,6 +45,17 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            @* کلاس ام دی 12 یعنی یک سطر کامل *@
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label asp-for="ProfilePhoto" class="control-label">عکس کاربر</label>
+                    @*<input type="file" class="form-control" asp-for="Picture" accept="image/*">*@
+                    <input type="file" class="form-control" asp-for="ProfilePhoto" accept="image/*">
+                    <span asp-validation-for="ProfilePhoto" class="error"></span>
+                </div>
+            </div>
+        </div>  @*row*@
         @* در هر کلاس رو رو کلاس ام دی 6 بیشتر جا نمیگیره *@
     <div class="row">
 
