--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
@@ -1,15 +1,18 @@
 ﻿ 
 @inject _0_Framework.Application.IAuthHelper AuthHelper;
+@{
+    var currentAccountInfo = AuthHelper.CurrentAccountInfo();
+}
 
 <div class="left side-menu">
     <div class="sidebar-inner slimscrollleft">
         <div class="user-details">
             <div class="pull-right">
-                <img src="~/AdminTheme/assets/images/users/Picture2.jpg" alt="" class="thumb-md img-circle">
+                <img src="~/ProductPictures/@currentAccountInfo.ProfilePhoto" alt="" class="thumb-md img-circle">
             </div>
             <div class="user-info">
                 <div class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">علی پازدار<span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">@currentAccountInfo.FullName<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="javascript:void(0)"><i class="md md-face-unlock"></i> Profile<div class="ripple-wrapper"></div></a></li>
                         <li><a href="javascript:void(0)"><i class="md md-settings"></i> Settings</a></li>
@@ -18,7 +21,7 @@
                     </ul>
                 </div>
 
-                <p class="text-muted m-0">مدیر سیسیتم</p>
+                <p class="text-muted m-0">@currentAccountInfo.Role</p>
             </div>
         </div>
         <!--- Divider -->
@@ -27,14 +30,15 @@
                 <li>
                     <a asp-page="/Index" class="waves-effect active"><i class="md md-home"></i><span> داشبورد </span></a>
                 </li>
-                <li>
-                    <a asp-page="/Inventory/Index" class="waves-effect "><i class="md md-store"></i><span> انبارداری </span></a>
-                </li>
+               
                 <li>
                     <a asp-page="/Comment/Comment/Index" class="waves-effect"><i class="md md-comment"></i><span> کامنت ها </span></a>
                 </li>
                 @if (AuthHelper.CurrentAccountRole() == "1")
                 {
+                    <li>
+                        <a asp-page="/Inventory/Index" class="waves-effect "><i class="md md-store"></i><span> انبارداری </span></a>
+                    </li>
                     <li class="has_sub">
                         <a class="waves-effect"><i class="md md-shop"></i><span> فروشگاه </span><span class="pull-right"><i class="md md-add"></i></span></a>
                         <ul class="list-unstyled">
@@ -45,16 +49,24 @@
 
                         </ul>
                     </li>
+                    <li class="has_sub">
+                        <a class="waves-effect"><i class="md md-business"></i><span> سیستم تخفیفات </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                        <ul class="list-unstyled">
+                            <li><a asp-page="/Discounts/CustomerDiscounts/Index">تخفیف مشتری</a></li>
+                            <li><a asp-page="/Discounts/ColleagueDiscounts/Index">تخفیف همکاری</a></li>
+
+                        </ul>
+                    </li>
+                    <li class="has_sub">
+                        <a class="waves-effect"><i class="md md-account-box"></i><span> سیستم کاربران </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                        <ul class="list-unstyled">
+                            <li><a asp-page="/Accounts/Account/Index">کاربران</a></li>
+                            <li><a asp-page="/Accounts/Role/Index">نقش ها</a></li>
+                        </ul>
+                    </li>
                 }
               
-                <li class="has_sub">
-                    <a class="waves-effect"><i class="md md-business"></i><span> سیستم تخفیفات </span><span class="pull-right"><i class="md md-add"></i></span></a>
-                    <ul class="list-unstyled">
-                        <li><a asp-page="/Discounts/CustomerDiscounts/Index">تخفیف مشتری</a></li>
-                        <li><a asp-page="/Discounts/ColleagueDiscounts/Index">تخفیف همکاری</a></li>
-
-                    </ul>
-                </li>
+               
                 <li class="has_sub">
                     <a class="waves-effect"><i class="md md-account-box"></i><span> سیستم بلاگینگ </span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
@@ -62,12 +74,9 @@
                         <li><a asp-page="/Blog/ArticleCategories/Index">گروه مقالات</a></li>
                     </ul>
                 </li>
-                <li class="has_sub">
-                    <a class="waves-effect"><i class="md md-account-box"></i><span> سیستم کاربران </span><span class="pull-right"><i class="md md-add"></i></span></a>
-                    <ul class="list-unstyled">
-                        <li><a asp-page="/Accounts/Account/Index">کاربران</a></li>
-                        <li><a asp-page="/Accounts/Role/Index">نقش ها</a></li>
-                    </ul>
+               
+                <li>
+                    <a asp-page="/Account" asp-page-handler="logout" class="waves-effect"><i class="fa fa-sign-out"></i><span> خروج </span></a>
                 </li>
                 @*oder menu*@
                 @*<li>
