ساختن و مپینگ جدول RolePermissions

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
@@ -8,7 +8,7 @@
     <div class="sidebar-inner slimscrollleft">
         <div class="user-details">
             <div class="pull-right">
-                <img src="~/ProductPictures/@currentAccountInfo.ProfilePhoto" alt="" class="thumb-md img-circle">
+                <img src="~/ProductPictures/@currentAccountInfo.ProfilePhoto" class="thumb-md img-circle">
             </div>
             <div class="user-info">
                 <div class="dropdown">
