جهت سطح دسترسی برای فولدر بندی  یا به صورت فقط دسترسی به یک فرم خاص و یا .. در استارت آپ 1) پالیسی ها را تعریف می کنیم و سپس             services.AddAuthorization(option =>             {                 option.AddPolicy("AdminArea",                     builder => builder.RequireRole(new List<string> {Roles.Administrator, Roles.contentUploader}));                 option.AddPolicy("Shop",                     builder => builder.RequireRole(new List<string> { Roles.Administrator }));                 option.AddPolicy("Discount",                     builder => builder.RequireRole(new List<string> { Roles.Administrator }));                 option.AddPolicy("Account",                     builder => builder.RequireRole(new List<string> { Roles.Administrator }));
            });

2)فولدر ها و کاربران مورد نظر را اختصاص می دهیم

            services.AddRazorPages()
                .AddMvcOptions(options=>options.Filters.Add<SecurityPageFilter>())
                .AddRazorPagesOptions(option=>
                {
                    option.Conventions.AuthorizeAreaFolder("Administration", "/", "AdminArea");
                    option.Conventions.AuthorizeAreaFolder("Administration", "/Shop", "Shop");
                    option.Conventions.AuthorizeAreaFolder("Administration", "/Discounts", "Discouont");
                    option.Conventions.AuthorizeAreaFolder("Administration", "/Accounts", "Account");

                });

و 3)یا می شود گفت ریز تر شد و علاوه بر فولدر به خود ریزو پیچ دسترسی داد مثلا در اینجا به اینونتوری دسترسی دادیم
 [Authorize(Roles = Roles.Administrator)]

اگر از روش سه استفاده کردیم نمی شود از روش های اول و دوم همزمان استفاده کرد

--- a/LampShade/ServiceHost/Pages/AccessDenied.cshtml
+++ b/LampShade/ServiceHost/Pages/AccessDenied.cshtml
@@ -2,4 +2,4 @@
 @model ServiceHost.Pages.AccessDeniedModel
 @{
 }
-<h1> 404 sorry!!! You dont have access this path.</h1>
+<h1 style="margin: 50px; color: crimson;"> 404 sorry!!! You dont have access this path.</h1>
