مکانیزم Pagefilter این مکانیزم در واقع قبل از اینکه اون هندلز اجرا بشه میاد و دسترسی رو چک میکنه برای اعمال دسترسی به تک ها مثلا ویرایش و ایجاد و .... نیاز به کلاس به نام permissionTagHellper داریم که داخل روت سرویس هاست ایجاد می شود برای شناسایی آن توسط تگ ها باید آن را به _ViewImports.cshtml که داخل pages هست اضافه کنیم با این کار باعث میشه آیتم هایکه  کاربر دسترسی نداره رو اساسا بهش نمایش نده به این صورت @addTagHelper *,ServiceHost * یعنی همه تگ هلپر ها رو که در servicehost هستند رو اضاقه کن  حالا اون المنتی رو که میخواهیم بهش دسترسی بدیم رو این تگ هلپری رو که ایجاد کردیم رو معرفی میکنیم مثلا permission="@InventoryPermissions.EditInventory" که به تگ آ که مربوط به ویرایش است اضافه کردیم اگه پرمیژن سبز شد یعنی درست به _ViewImports.cshtml اضافه شده اگه نه باید چک بشه

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/ColleagueDiscounts/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/ColleagueDiscounts/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using DiscountManagement.Configuration.Permissions
 @model Areas.Administration.Pages.Discounts.ColleagueDiscounts.IndexModel
 @{
     Layout = "Shared/_AdminLayout";
@@ -9,12 +10,12 @@
     <div class="col-sm-12">
         <h4 class="page-title pull-right">@ViewData["title"]</h4>
         <p class="pull-left">
-            <a class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")">تعریف تخفیف همکاری</a>
+            <a permission="@DiscountPermissions.DefineColleagueDiscount" class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")">تعریف تخفیف همکاری</a>
         </p>
     </div>
 </div>
 
-<div class="row">
+<div class="row" permission="@DiscountPermissions.SearchColleagueDiscount">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -40,7 +41,7 @@
     </div>
 </div>
 
-<div class="row" id="ProductCategoriesDiv">
+<div class="row" id="ProductCategoriesDiv" permission="@DiscountPermissions.listColleagueDiscount">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -68,18 +69,18 @@
                                     <td>@item.DiscountRate%</td>
                                     <td>@item.CreationDate</td>
                                     <td>
-                                        <a class="btn btn-warning btn-rounded waves-effect waves-light m-b-5"
+                                        <a permission="@DiscountPermissions.EditColleagueDiscount" class="btn btn-warning btn-rounded waves-effect waves-light m-b-5"
                                            href="#showmodal=@Url.Page("./Index", "Edit", new {id = @item.Id})">
                                             <i class="fa fa-edit"></i> ویرایش
                                         </a>
                                         @if (item.IsRemoved)
                                         {
-                                            <a class="btn btn-danger btn-rounded waves-effect waves-light m-b-5" asp-page="./Index" asp-route-id="@item.Id"
+                                            <a permission="@DiscountPermissions.ActiveColleagueDiscount" class="btn btn-danger btn-rounded waves-effect waves-light m-b-5" asp-page="./Index" asp-route-id="@item.Id"
                                                asp-page-handler="Restore">فعال سازی</a>
                                         }
                                         else
                                         {
-                                            <a class="btn btn-success btn-rounded waves-effect waves-light m-b-5" asp-page="./Index" asp-route-id="@item.Id"
+                                            <a permission="@DiscountPermissions.ActiveColleagueDiscount" class="btn btn-success btn-rounded waves-effect waves-light m-b-5" asp-page="./Index" asp-route-id="@item.Id"
                                                asp-page-handler="Remove">غیر فعال </a>
                                         }
                                     </td>
