--- a/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿@page
+@using DiscountManagement.Configuration.Permissions
 @model Areas.Administration.Pages.Discounts.CustomerDiscounts.IndexModel
 @{
     Layout = "Shared/_AdminLayout";
     ViewData["title"] = "مدیریت تخفیفات مشتریان";
 }
 
-<div class="row">
+<div class="row" permission="@DiscountPermissions.DefineCustomerDiscount">
     <div class="col-sm-12">
         <h4 class="page-title pull-right">@ViewData["title"]</h4>
         <p class="pull-left">
@@ -14,7 +15,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" permission="@DiscountPermissions.SearchCustomerDiscount">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -50,7 +51,7 @@
     </div>
 </div>
 
-<div class="row" id="ProductCategoriesDiv">
+<div class="row" id="ProductCategoriesDiv" permission="@DiscountPermissions.listCustomerDiscount">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -84,7 +85,7 @@
                                     <td>@item.Reason</td>
                                     <td>@item.CreationDate</td>
                                     <td>
-                                        <a class="btn btn-warning btn-rounded waves-effect waves-light m-b-5"
+                                        <a permission="@DiscountPermissions.EditCustomerDiscount" class="btn btn-warning btn-rounded waves-effect waves-light m-b-5"
                                            href="#showmodal=@Url.Page("./Index", "Edit", new {id = @item.Id})">
                                             <i class="fa fa-edit"></i> ویرایش
                                         </a>
