--- a/LampShade/ServiceHost/Areas/Administration/Pages/Inventory/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Inventory/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using InventoryManagement.Configuration.Permissions
 @model Areas.Administration.Pages.Inventory.IndexModel
 @{
     Layout = "Shared/_AdminLayout";
@@ -9,12 +10,12 @@
     <div class="col-sm-12">
         <h4 class="page-title pull-right">@ViewData["title"]</h4>
         <p class="pull-left">
-            <a class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")">ایجاد انبار جدید</a>
+            <a permission="@InventoryPermissions.CreateInventory" class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")">ایجاد انبار جدید</a>
         </p>
     </div>
 </div>
 
-<div class="row">
+<div class="row" permission="@InventoryPermissions.SearchInventory">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -48,7 +49,7 @@
     </div>
 </div>
 
-<div class="row" id="ProductCategoriesDiv">
+<div class="row" id="ProductCategoriesDiv" permission="@InventoryPermissions.ListInventory">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -78,19 +79,19 @@
                                     <td>@item.CurrentCount</td>
                                     <td>@item.CreationDate</td>
                                     <td>
-                                        <a class="btn btn-warning btn-rounded waves-effect waves-light m-b-5"
+                                        <a permission="@InventoryPermissions.EditInventory" class="btn btn-warning btn-rounded waves-effect waves-light m-b-5"
                                            href="#showmodal=@Url.Page("./Index", "Edit", new {id = @item.Id})">
                                             <i class="fa fa-edit"></i> ویرایش
                                         </a>
-                                        <a class="btn btn-success btn-rounded waves-effect waves-light m-b-5"
+                                        <a permission="@InventoryPermissions.Increase" class="btn btn-success btn-rounded waves-effect waves-light m-b-5"
                                            href="#showmodal=@Url.Page("./Index", "Increase", new {id = @item.Id})">
                                             <i class="fa fa-plus"></i> افزایش موجودی
                                         </a>
-                                        <a class="btn btn-danger btn-rounded waves-effect waves-light m-b-5"
+                                        <a permission="@InventoryPermissions.Reduce" class="btn btn-danger btn-rounded waves-effect waves-light m-b-5"
                                            href="#showmodal=@Url.Page("./Index", "Reduce", new {id = @item.Id})">
                                             <i class="fa fa-minus"></i> کاهش موجودی
                                         </a>
-                                        <a class="btn btn-primary btn-rounded waves-effect waves-light m-b-5"
+                                        <a permission="@InventoryPermissions.OperationLog" class="btn btn-primary btn-rounded waves-effect waves-light m-b-5"
                                            href="#showmodal=@Url.Page("./Index", "Log", new {id = @item.Id})">
                                             <i class="fa fa-recycle"></i> مشاهده گردش انبار
                                         </a>
