دسترسی به منوها و مقالات

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Blog/ArticleCategories/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Blog/ArticleCategories/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using BlogManagement.Configuration.Permissions
 @model ServiceHost.Areas.Administration.Pages.Blog.ArticleCategories.IndexModel
 @{
 }
@@ -11,12 +12,12 @@
     <div class="col-sm-12">
         <h4 class="page-title pull-right">@ViewData["title"]</h4>
         <p class="pull-left">
-            <a class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")">ایجاد گروه مقاله جدید</a>
+            <a permission="@BlogPermissions.CreateArticleCategory" class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")">ایجاد گروه مقاله جدید</a>
         </p>
     </div>
 </div>
 
-<div class="row">
+<div class="row" permission="@BlogPermissions.SearchArticleCategory">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -36,7 +37,7 @@
     </div>
 </div>
 
-<div class="row" id="ProductCategoriesDiv">
+<div class="row" id="ProductCategoriesDiv" permission="@BlogPermissions.ListArticleCategory">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -75,7 +76,7 @@
                                     <td>
                                         @*href="#showmodal=@Url.Page("./Index","EditProduct",new {id=@item.Id})"*@
                                         @*mige be Page Index boro va fun EditProduct ro seda bezan va Id ro ham begir*@
-                                        <a class="btn btn-warning pull-right m-rl-5"
+                                        <a permission="@BlogPermissions.EditArticleCategory" class="btn btn-warning pull-right m-rl-5"
                                            href="#showmodal=@Url.Page("./Index", "Edit", new {id = @item.Id})">
                                             <i class="fa fa-edit"></i> ویرایش
                                         </a>
