--- a/LampShade/ServiceHost/Areas/Administration/Pages/Blog/Articles/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Blog/Articles/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using BlogManagement.Configuration.Permissions
 @model ServiceHost.Areas.Administration.Pages.Blog.Articles.IndexModel
 @{
 }
@@ -11,12 +12,12 @@
     <div class="col-sm-12">
         <h4 class="page-title pull-right">@ViewData["title"]</h4>
         <p class="pull-left">
-            <a class="btn btn-success btn-lg" asp-page="./Create">ایجاد مقاله جدید</a>
+            <a permission="@BlogPermissions.CreateArticles" class="btn btn-success btn-lg" asp-page="./Create">ایجاد مقاله جدید</a>
         </p>
     </div>
 </div>
 
-<div class="row">
+<div class="row" permission="@BlogPermissions.SearchArticles">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -42,7 +43,7 @@
     </div>
 </div>
 
-<div class="row" id="ProductCategoriesDiv">
+<div class="row" id="ProductCategoriesDiv" permission="@BlogPermissions.listArticles">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -78,7 +79,7 @@
                                     <td>
                                         @*href="#showmodal=@Url.Page("./Index","EditProduct",new {id=@item.Id})"*@
                                         @*mige be Page Index boro va fun EditProduct ro seda bezan va Id ro ham begir*@
-                                        <a class = "btn btn-warning pull-right m-rl-5" asp-page = "./Edit" asp-route-id="@item.Id" >
+                                        <a permission="@BlogPermissions.EditArticles" class = "btn btn-warning pull-right m-rl-5" asp-page = "./Edit" asp-route-id="@item.Id" >
                                             <i class = "fa fa-edit" ></i> ویرایش
                                         </a>
                                     </td>
