--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
@@ -1,4 +1,5 @@
-﻿ 
+﻿@using MenuManagement.Configuration.Permissions
+ 
 @inject _0_Framework.Application.IAuthHelper AuthHelper;
 @{
     var currentAccountInfo = AuthHelper.CurrentAccountInfo();
@@ -32,15 +33,15 @@
                 </li>
                
                 <li>
-                    <a asp-page="/Comment/Comment/Index" class="waves-effect"><i class="md md-comment"></i><span> کامنت ها </span></a>
+                    <a permission="@MenuPermissions.Comments" asp-page="/Comment/Comment/Index" class="waves-effect"><i class="md md-comment"></i><span> کامنت ها </span></a>
                 </li>
                 @if (AuthHelper.CurrentAccountRole() == "1")
                 {
                     <li>
-                        <a asp-page="/Inventory/Index" class="waves-effect "><i class="md md-store"></i><span> انبارداری </span></a>
+                        <a permission="@MenuPermissions.Inventory" asp-page="/Inventory/Index" class="waves-effect "><i class="md md-store"></i><span> انبارداری </span></a>
                     </li>
                     <li class="has_sub">
-                        <a class="waves-effect"><i class="md md-shop"></i><span> فروشگاه </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                        <a permission="@MenuPermissions.Shop" class="waves-effect"><i class="md md-shop"></i><span> فروشگاه </span><span class="pull-right"><i class="md md-add"></i></span></a>
                         <ul class="list-unstyled">
                             <li><a asp-page="/Shop/slides/Index">اسلایدر</a></li>
                             <li><a asp-page="/Shop/ProductCategories/Index">گروه محصولات</a></li>
@@ -50,7 +51,7 @@
                         </ul>
                     </li>
                     <li class="has_sub">
-                        <a class="waves-effect"><i class="md md-business"></i><span> سیستم تخفیفات </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                        <a permission="@MenuPermissions.Discount" class="waves-effect"><i class="md md-business"></i><span> سیستم تخفیفات </span><span class="pull-right"><i class="md md-add"></i></span></a>
                         <ul class="list-unstyled">
                             <li><a asp-page="/Discounts/CustomerDiscounts/Index">تخفیف مشتری</a></li>
                             <li><a asp-page="/Discounts/ColleagueDiscounts/Index">تخفیف همکاری</a></li>
@@ -58,7 +59,7 @@
                         </ul>
                     </li>
                     <li class="has_sub">
-                        <a class="waves-effect"><i class="md md-account-box"></i><span> سیستم کاربران </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                        <a permission="@MenuPermissions.Users" class="waves-effect"><i class="md md-account-box"></i><span> سیستم کاربران </span><span class="pull-right"><i class="md md-add"></i></span></a>
                         <ul class="list-unstyled">
                             <li><a asp-page="/Accounts/Account/Index">کاربران</a></li>
                             <li><a asp-page="/Accounts/Role/Index">نقش ها</a></li>
@@ -68,7 +69,7 @@
               
                
                 <li class="has_sub">
-                    <a class="waves-effect"><i class="md md-account-box"></i><span> سیستم بلاگینگ </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                    <a permission="@MenuPermissions.Blogin" class="waves-effect"><i class="md md-account-box"></i><span> سیستم بلاگینگ </span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
                         <li><a asp-page="/Blog/Articles/Index">مقالات</a></li>
                         <li><a asp-page="/Blog/ArticleCategories/Index">گروه مقالات</a></li>
