تبدیل فرم های ایجاد کاربر و تفییر آن از شو مدال به ریزور پیج برای اینجاد دسترسی برای کاربر

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Blog/Articles/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Blog/Articles/Create.cshtml
@@ -12,7 +12,7 @@
                 <h3 class="panel-title">ایجاد مقاله جدید</h3>
             </div>
             <div class="panel-body">
-                <form method="post" enctype="multipart/form-data">
+                <form method="post">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="form-group">
