--- a/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Edit.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Edit.cshtml
@@ -1,74 +1,73 @@
-﻿@model AccountManagement.Applicatoin.Contracts.Account.EditAccount
+﻿@page
+@model ServiceHost.Areas.Administration.Pages.Accounts.Account.EditModel
 @{
+    Layout = "Shared/_AdminLayout";
+    ViewData["Title"] = "ویرایش کاربر";
 }
 
-<div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h4 class="modal-title">ویرایش  کاربر :@Model.Fullname</h4>
-</div>
-@*//jahat estefad dar site.js --->data-ajax="true"*@
-<form asp-page="./Index" asp-page-handler="Edit"
-      method="post"
-      data-ajax="true"
-      data-callback=""
-      data-action="Refresh"
-      enctype="multipart/form-data">
-    <div class="modal-body">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="Fullname" class="control-label">نام</label>
-                    @*dar jqueery site.js makeslug vojod dare va baese poor shodan khodkare Slug az name mishe*@
-                    <input type="text" class="form-control" asp-for="Fullname">
-                    <span asp-validation-for="Fullname" class="error"></span>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="Username" class="control-label">نام کاربری</label>
-                    <input type="text" class="form-control" asp-for="Username">
-                    <span asp-validation-for="Username" class="error"></span>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="Mobile" class="control-label">موبایل</label>
-                    <input type="text" class="form-control" asp-for="Mobile">
-                    <span asp-validation-for="Mobile" class="error"></span>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            @* کلاس ام دی 12 یعنی یک سطر کامل *@
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label asp-for="ProfilePhoto" class="control-label">عکس کاربر</label>
-                    @*<input type="file" class="form-control" asp-for="Picture" accept="image/*">*@
-                    <input type="file" class="form-control" asp-for="ProfilePhoto" accept="image/*">
-                    <span asp-validation-for="ProfilePhoto" class="error"></span>
-                </div>
-            </div>
-        </div>  @*row*@
-        @* در هر کلاس رو رو کلاس ام دی 6 بیشتر جا نمیگیره *@
-        <div class="row">
 
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label asp-for="RoleId" class="control-label">نقش ها</label>
-                    @* برای اینکه از تکنولوژی ام وی سی در کانترکت کریت استفاده نکنیم و وابستگی ایجاد نکنیم *@
-                    @* از این روش استفاده کردیم *@
-                    <select class="form-control" asp-for="RoleId"
-                            asp-items='new SelectList(Model.Roles,"Id","Name")'>
-                        <option value="0">نقش</option>
-                    </select>
-                    <span asp-validation-for="RoleId" class="error"></span>
-                </div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">ویرایش کاربر @Model.Command.Fullname</h3>
+            </div>
+            <div class="panel-body">
+                <form method="post" enctype="multipart/form-data">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="Command.Fullname" class="control-label">نام</label>
+                                <input type="text" class="form-control" asp-for="Command.Fullname" onchange="makeSlug('Title', 'Slug')">
+                                <span asp-validation-for="Command.Fullname" class="error"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="Command.Username" class="control-label">نام کاربری</label>
+                                <input type="text" class="form-control" asp-for="Command.Username">
+                                <span asp-validation-for="Command.Username" class="error"></span>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="Command.Mobile" class="control-label">موبایل</label>
+                                <input type="text" class="form-control" asp-for="Command.Mobile">
+                                <span asp-validation-for="Command.Mobile" class="error"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label asp-for="Command.ProfilePhoto" class="control-label">عکس</label>
+                                    <input type="file" class="form-control" asp-for="Command.ProfilePhoto" accept="image/*">
+                                    <span asp-validation-for="Command.ProfilePhoto" class="error"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="Command.RoleId">نقش</label>
+                                <select class="form-control" asp-for="Command.RoleId" asp-items="Model.Roles">
+                                    <option value="0">نقش</option>
+                                </select>
+                                <span asp-validation-for="Command.RoleId" class="error"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <input type="hidden" asp-for="@Model.Command.Id" value="@Model.Command.Id" />
+                    <button type="submit" class="btn btn-success waves-effect waves-light m-b-5">ایجاد</button>
+                    <a asp-page="./Index" class="btn btn-dark waves-effect waves-light m-b-5">بازگشت</a>
+                </form>
             </div>
         </div>
-        <input type="hidden" asp-for="Id" value="@Model.Id" />
     </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">بستن</button>
-        <button type="submit" class="btn btn-info waves-effect waves-light">ویرایش</button>
-    </div>
-</form>
+</div>
+
