--- a/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Index.cshtml
@@ -11,7 +11,7 @@
     <div class="col-sm-12">
         <h4 class="page-title pull-right">@ViewData["title"]</h4>
         <p class="pull-left">
-            <a class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")">ایجاد کاربر جدید</a>
+            <a class="btn btn-success btn-lg" asp-page="Create">ایجاد کاربر جدید</a>
         </p>
     </div>
 </div>
@@ -91,7 +91,7 @@
                                     <td>@item.CreationDate</td>
                                     <td>
                                         <a class="btn btn-warning btn-default waves-effect waves-light m-b-5"
-                                           href="#showmodal=@Url.Page("./Index", "Edit", new {id = @item.Id})">
+                                          asp-page="Edit" asp-route-Id="@item.Id">
                                             <i class="fa fa-edit"></i> ویرایش
                                         </a>
                                         <a class="btn btn-primary btn-default waves-effect waves-light m-b-5"
