ایجاد سطح دسترسی در سطح کاربر با این کار هم می توان درسطح کاربر دسترسی تعریف کرد و هم درسطح رول

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Create.cshtml
@@ -41,7 +41,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label asp-for="Command.Password" class="control-label">کلمه رمز</label>
-                                <input type="text" class="form-control" asp-for="Command.Password">
+                                <input type="password" class="form-control" asp-for="Command.Password">
                                 <span asp-validation-for="Command.Password" class="error"></span>
                             </div>
                         </div>
